[package]
name = "nostro2-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false
description = "Cross-library benchmark harness comparing nostro2 to the upstream `nostr` crate."

[features]
# Default backend is `k256` (pure Rust). The upstream `nostr` crate uses
# libsecp256k1 (a C implementation), so out-of-the-box the crypto bench
# numbers (keygen / signing / verification) are comparing pure-Rust to C
# — that gap is real and worth knowing, but it is *not* a like-for-like
# library comparison. Run the harness with
# `--no-default-features --features secp256k1` to put both sides on the
# same C backend and isolate the JSON/protocol/data-structure diff.
# Until that flag is set, treat any "nostro2 vs nostr" crypto delta as
# "k256 (pure Rust) vs libsecp256k1 (C)" plus protocol overhead.
default = ["k256"]
k256 = [
    "nostro2/k256",
    "nostro2-signer/k256",
    "nostro2-nips/k256",
]
secp256k1 = [
    "nostro2/secp256k1",
    "nostro2-signer/secp256k1",
    "nostro2-nips/secp256k1",
]

[dependencies]
# nothing — this crate ships no library code, only bench targets.

[dev-dependencies]
# Workspace deps land with default-features = false (so consumers can pick
# k256 or secp256k1). The features above forward whichever curve was picked
# at build time; do not pin one here.
nostro2 = { workspace = true }
nostro2-signer = { workspace = true }
nostro2-nips = { workspace = true }
divan.workspace = true
bourne.workspace = true
serde_json.workspace = true
# External yardstick. Pinned to the same major as last time we updated this
# harness; bump in lockstep with substantive comparison changes so the
# numbers in commit history stay interpretable. `nip44` is opt-in upstream.
nostr = { version = "0.44", features = ["nip44"] }
[[bench]]
name = "nostr_comparison"
harness = false
