[package]
name = "nostro2-nips"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Nostro2 is a simple toolset for interacting with the Nostr protocol."
repository = "https://github.com/42Pupusas/NostrO2.git"
readme = "../../README.md"
homepage = "https://github.com/42Pupusas/NostrO2.git"
documentation = "https://docs.rs/nostro2/latest/nostro2/"

[features]
# `nostro2-nips` calls `NostrNote::verify()` (curve-gated in `nostro2`),
# so it must forward a curve to `nostro2`. The default mirrors the
# historical behaviour. Consumers who want `secp256k1` should set
# `default-features = false` and pick the `secp256k1` feature here.
# These features only forward to `nostro2` — `nostro2-nips` does not
# link any curve crate of its own. Schnorr signing goes through the
# `NostrSigner` trait, ECDH through `NostrKeypair`, and verification
# through `NostrNote::verify`. The HKDF/HMAC/SHA2 primitives used by
# NIP-04/NIP-44 come from their own RustCrypto crates.
default = ["k256"]
k256 = ["nostro2/k256"]
secp256k1 = ["nostro2/secp256k1"]

[dependencies]
base64.workspace = true
chacha20.workspace = true
hkdf.workspace = true
hmac.workspace = true
nostro2 = { workspace = true, default-features = false }
nostro2-traits.workspace = true
getrandom.workspace = true
bourne.workspace = true
sha2.workspace = true
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true
# Tests need a concrete keypair to exercise the trait-bounded NIP impls;
# `NipTester` in `lib.rs` wraps `k256::schnorr::SigningKey` for that.
# Production code in this crate has no curve dependency.
k256.workspace = true

