[package]
name = "nostro2-traits"
version = "0.1.0"
edition = "2021"
categories = ["authentication", "cryptography"]
license = "MIT"
description = "Signing traits for the nostro2 ecosystem (NostrSigner, NostrKeypair)."
repository = "https://github.com/42Pupusas/NostrO2.git"

[dev-dependencies]
divan.workspace = true
hex = "0.4"
proptest = "1"

[[bench]]
name = "hex_bench"
path = "../../benches/hex_bench.rs"
harness = false

[dependencies]
